<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">绿建中心</string>
    <string name="hello_world">Hello world!</string>
    <string name="size">800dp</string>
    <string name="gridview_item_text">行业会员</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="message">服务</string>
    <string name="search">成员</string>
    <string name="gouwuche">产品</string>
    <string name="myinfo">我的</string>
    <string name="register12">请输入手机号码：</string>
    <string name="mima">**********</string>
    <string name="register13">手机号码</string>
    <string name="register1">用户名：</string>
    <string name="register0">密码：</string>
    <string name="kongzi">"    "</string>
    <string name="ma">码：</string>
    <string name="register3">确定密码：</string>
    <string name="registered">注册帐号</string>
    <string name="forgot">忘记密码</string>
    <string name="shuxian">|</string>
    <string name="register2">验证码：</string>
    <string name="register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="slidingtopname"></string>
    <string name="str_sliding_bottom_text1">设置</string>
    <string name="str_sliding_bottom_text2">扫面二维码</string>
    <string name="str_middle_text1">首页</string>
    <string name="str_middle_text2">招投标</string>
    <string name="str_middle_text3">政策信息</string>
    <string name="str_middle_text4">关于</string>
    <string name="str_middle_text5">产品展示</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="j1">国家政策</string>
    <string name="j2">地方政策</string>
    <string name="j3">联盟政策</string>
    <string name="j4">行业政策</string>
    <string name="j5">u</string>
    <string name="j6">o</string>
    <string name="title_activity_gong_si">GongSiActivity</string>
    <string name="title_activity_wang_ye">WangYeActivity</string>
    <string name="title_activity_de_po_cai_ji">DePoCaiJiActivity</string>
    <string name="title_activity_meng_yuan_xiang_qing__dialog">MengYuanXiangQing_DialogActivity</string>
    <string name="title_activity_jiang_ru_liang_meng_xie_yi">JiangRuLiangMengXieYiActivity</string>
    <string name="title_activity_limengxinwengengduozhengwen">LimengxinwengengduozhengwenActivity</string>
    <string name="title_activity_jishuzhanshixiangqing">JishuzhanshixiangqingActivity</string>
    <string name="title_activity_chenggonganlixiangqing">ChenggonganlixiangqingActivity</string>
    <string name="title_activity_hangyezhengce">HangyezhengceActivity</string>
    <string name="title_activity_lianmengzhengce">LianmengzhengceActivity</string>
    <string name="title_activity_difangzhengce">DifangzhengceActivity</string>
    <string name="title_activity_guojiazhengcexiangqing">GuojiazhengcexiangqingActivity</string>
    <string name="title_activity_fuwu_qian_san">FuwuQianSanActivity</string>
    <string name="title_activity_gongsijianjie">GongsijianjieActivity</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_tou_rong_zi">TouRongZiActivity</string>
    <string name="title_activity_abcdadsa">Abcdadsa</string>
    <string name="title_activity_zhaozijin">ZhaozijinActivity</string>
    <string name="title_activity_zhaoxiangmu">ZhaoxiangmuActivity</string>
    <string name="title_activity_xiang_mu_rong_zi">XiangMuRongZiActivity</string>
    <string name="title_activity_xiang_mu_rong_zi_activity_1">XiangMuRongZiActivity_1</string>
    <string name="title_activity_gu_quan">GuQuanActivity</string>
    <string name="title_activity_ceng_gong_an_li">CengGongAnLiActivity</string>
    <string name="title_activity_chenggonganli_activity__xiang_qing">
        ChenggonganliActivity_XiangQing
    </string>
    <string name="title_activity_ziliaoxinxi">ZiliaoxinxiActivity</string>
    <string name="title_activity_fachutoudi">FachutoudiActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ju_ren_mai_xiang_qing_">JuRenMaiXiangQing_Activity</string>
    <string name="title_activity_web">WebActivity</string>

</resources>