<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:scrollbars="none" >

    <include
        android:id="@+id/register_detail"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        layout="@layout/login_title" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_detail"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg4" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register1"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kongzi"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/phone_edit_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/register12"
                android:singleLine="true"
                android:text=""
                android:textSize="17sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dip"
            android:background="@drawable/login_bg4" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register0"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kongzi"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/register_yzm_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/mima"
                android:inputType="textPassword"
                android:maxLength="12"
                android:singleLine="true"
                android:text=""
                android:textSize="17sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center" >

            <!-- android:layout_marginRight="15dp" -->

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:text="@string/registered"
                android:textColor="@color/tianhuai"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shuxian"
                android:textColor="@color/tianhuai"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:text="@string/forgot"
                android:textColor="@color/tianhuai"
                android:textSize="17sp" />
        </LinearLayout>

        <Button
            android:id="@+id/new_register_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/yuanjiao"
            android:clickable="true"
            android:gravity="center"
            android:text="登录"
            android:textColor="#ffffffff"
            android:textSize="20sp" />
    </LinearLayout>
    <!-- login_btn -->

</RelativeLayout>