<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/custom_title_height"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="#e6e6e6"
    android:orientation="horizontal" >
    
    <!-- android:background="@drawable/bg"bottom| -->
    <LinearLayout
        android:id="@+id/home_tag_id"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/homepic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:paddingTop="5dp"
            android:textColor="@drawable/bottomtext"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/message_tag_id"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/messagepic" />

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/message"
            android:textColor="@drawable/bottomtext" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_tag_id"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/searchpic" />

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:paddingTop="5dp"
            android:textColor="@drawable/bottomtext" />
    </LinearLayout>
    
      <LinearLayout
          android:id="@+id/aaa_tag_id"
          android:layout_width="0dp"
          android:layout_height="fill_parent"
          android:layout_weight="0.2"
          android:gravity="center"
          android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/dhihdowhduwehr" />

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/gouwuche"
            android:textColor="@drawable/bottomtext" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/myinfo_tag_id"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/myinfopic" />

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/myinfo"
            android:textColor="@drawable/bottomtext" />
    </LinearLayout>

</LinearLayout>